--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -161,7 +161,7 @@ Our implementation of the erosion rate follows one of the approaches taken in \c
 \end{equation}
 
 \noindent
-$k_{e}$ is a proportionality constant ((m/yr)$^{1-m}$) and $m$ and $n$ are adjustable exponents that are kept as 0.5 and 1 as in \citet{Maffre2018a}. This formulation is similar to the large-scale BQART model of \citet{Syvitski2007a}, but without a temperature dependence and the replacement of elevation with slope, resulting in functional form that more closely resembles the stream power law \citep{Davy2000a}. This form and these exponent values are supported by various compilations (e.g. \citealp{Lague2014a}) although \citet{Lague2014a} also suggests that there is variability in the proportionality constant that is difficult to capture at a global scale.
+$k_{e}$ is a proportionality constant ((m/yr)$^{1-m}$) and $m$ and $n$ are adjustable exponents that are kept as 0.5 and 1 as in \citet{Maffre2018a}. This formulation is similar to the large-scale BQART model of \citet{Syvitski2007a}, but without a temperature dependence and the replacement of elevation with slope, resulting in functional form that more closely resembles the stream power law \citep{Davy2000a}. This form and these exponent values are supported by various compilations (e.g. \citealp{Lague2013a}) although \citet{Lague2013a} also suggests that there is variability in the proportionality constant that is difficult to capture at a global scale.
 
 The $K$ in the dissolution rate constant in Equation \ref{eq:2} describes the dependence of the chemical weathering on climate:
 
@@ -314,49 +314,49 @@ The lithologic map used in the ``reduced I\&NG + Sunda Shelf'' scenario (Fig. \r
 
 \section*{Paleoshorelines}
 
-Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in I\&NG. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$. We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citep{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma), and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries, i.e. Early Miocene = 23-16 Ma, Middle Miocene = 15.99-11.61 Ma, Late Miocene = 11.6-5.4 Ma, Pliocene =5.39-3.8 Ma, but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
+Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in I\&NG. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$. We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citep{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma), and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries (i.e. Early Miocene = 23--16~Ma, Middle Miocene = 15.99--11.61~Ma, Late Miocene = 11.6--5.4~Ma, Pliocene =5.39--3.8 Ma) but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
 
-Several new sources for paleoshoreline data have become available since \citet{Molnar2015a}. Particularly, for Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a} and \citet{Hall2018a}, and in New Guinea, we followed \citet{Gold2017a} and \cite{Harrington2017a}. Although the outlines of our paleoshorelines are significantly different from those used for 5 Ma by \citet{Molnar2015a} our calculated area is comparable (Fig. 1). 
+Several new sources for paleoshoreline data have become available since \citet{Molnar2015a}. Particularly, for Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a}, and in New Guinea, we followed \citet{Gold2017a} and \cite{Harrington2017a}. Although the outlines of our paleoshorelines are significantly different from those used for 5~Ma by \citet{Molnar2015a} our calculated area is comparable (Fig. \ref{fig:shoreline_growth}). 
 
 \subsection*{Malay Peninsula and Sunda Shelf}
 
-Paleogeographic reconstructions of Peninsular Malaysia suggest that it has been largely exposed over the last 20 Ma (Hall, 2013b; Hall and Nichols, 2002). Although the majority of the Sunda Shelf is currently submerged, large portions of this flat-lying, relatively stable platform of continental crust were also emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum (Hall and Nichols, 2002). Similarities between the terrestrial biotas of Borneo and mainland Southeast Asia confirm the existence of land bridges on the Sunda Shelf throughout the Miocene (Moss and Wilson, 1998). During the Eocene through Early Miocene rifting of the South China Sea resulted in subsidence throughout the Sunda Shelf (Morley and Morley, 2013). Grabens associated with this subsidence became freshwater rift lakes that later transitioned to partially enclosed inland seas and extensive brackish or saline wetland environments. Extensive palynological analysis suggests widespread swamp environments persisting through the Late Miocene (Morley and Morley, 2013). Basement highs (e.g. the Natuna Arch, currently subaerially exposed as the largely granitic island of Natuna off SW Borneo, as well as the granitic Tin Islands south of the Malay Peninsula) are typically bounded by Paleogene to Neogene basins dominated by shallow marine clastic fill (Darmadi et al., 2007). Although most paleogeographic reconstructions of the region incorporate some degree of exposure of the Sunda Shelf from 20 Ma onwards (Hall, 2013b; Madon et al., 2013), Molnar and Cronin (2015) omit the Sunda Shelf from their paleogeographic model for 5 Ma.
+Paleogeographic reconstructions of Peninsular Malaysia suggest that it has been largely exposed over the last 20~Ma \citep{Hall2013b, Hall2002a}. Although the majority of the Sunda Shelf is currently submerged, large portions of this flat-lying, relatively stable platform of continental crust were also emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum \citep{Hall2002a}. Similarities between the terrestrial biotas of Borneo and mainland Southeast Asia confirm the existence of land bridges on the Sunda Shelf throughout the Miocene \citep{Moss1998a}. During the Eocene through Early Miocene rifting of the South China Sea resulted in subsidence throughout the Sunda Shelf \citep{Morley2013a}. Grabens associated with this subsidence became freshwater rift lakes that later transitioned to partially enclosed inland seas and extensive brackish or saline wetland environments. Extensive palynological analysis suggests widespread swamp environments persisting through the Late Miocene \citep{Morley2013a}. Basement highs (e.g. the Natuna Arch, currently subaerially exposed as the largely granitic island of Natuna off SW Borneo, as well as the granitic Tin Islands south of the Malay Peninsula) are typically bounded by Paleogene to Neogene basins dominated by shallow marine clastic fill \citep{Darmadi2007a}. Although most paleogeographic reconstructions of the region incorporate some degree of exposure of the Sunda Shelf from 20~Ma onwards \citep{Hall2013b, Madon2013a}, \citet{Molnar2015a} omit the Sunda Shelf from their paleogeographic model for 5~Ma.
 
 \subsection*{Borneo and Palawan}
 
-Our reconstructions of the paleoshorelines of Borneo and Palawan are largely informed by extant paleogeographic constructions detailed in Hall (2001, 2013a, b),  as well as geologic maps and local shoreline reconstructions found in van de Weerd and Armin (1992), Witts et al. (2012), Madon et al. (2013), and Kessler and Jong (2015). Comprised of Paleozoic to Mesozoic crustal components that were largely accreted to Sundaland by the late Cretaceous (Metcalfe, 2013), the southern and western portions of Borneo (SW Kalimantan) have been subaerially exposed throughout the Neogene (Hall, 2013a, b). A collision along the northern margin of Borneo associated with the initiation of rifting in the South China Sea resulted in the late Eocene uplift of the Central Range mountains (Hutchison, 1996), which provide sediment to basins along the Southern (Kalimantan) and northern (Sabah and Sarawak) coasts of the island. In the east, the Barito, Kutei, and Tarakan basins developed as a single area of subsidence (associated with the opening of the Makassar Straits in the Eocene) before the basins were isolated by Oligocene faulting and Miocene uplift (Witts et al., 2012). The Kutei Basin is characterized by eastward-prograding deltaic and shallow shelf deposits that have been steadily supplied with sediment from the Schwaner Mountains of SW Kalimantan and the Central Range (van de Weerd and Armin, 1992). North of the Kutei Basin, the deltaic deposits found in the Tarakan Basin similarly prograde eastward from the mid Miocene onward, fed by the northern drainages of the Central Range (Satyana et al., 1999). In SE Kalimantan, the Barito Basin is bounded to the east by the ophiolite-bearing Meratus Mountains. Sedimentological data suggests that the Meratus Mountains were not emergent until the Late Miocene (Witts et al., 2012).
+Our reconstructions of the paleoshorelines of Borneo and Palawan are largely informed by extant paleogeographic constructions detailed in \citet{Hall2001a, Hall2013a, Hall2013b},  as well as geologic maps and local shoreline reconstructions found in \citet{vandeWeerd1992a, Witts2012a, Madon2013a, Kessler2015a}. Comprised of Paleozoic to Mesozoic crustal components that were largely accreted to Sundaland by the late Cretaceous \citep{Metcalfe2013a}, the southern and western portions of Borneo (SW Kalimantan) have been subaerially exposed throughout the Neogene \citep{Hall2013a, Hall2013b}. A collision along the northern margin of Borneo associated with the initiation of rifting in the South China Sea resulted in the late Eocene uplift of the Central Range mountains \citep{Hutchison1996a}, which provide sediment to basins along the Southern (Kalimantan) and northern (Sabah and Sarawak) coasts of the island. In the east, the Barito, Kutei, and Tarakan basins developed as a single area of subsidence (associated with the opening of the Makassar Straits in the Eocene) before the basins were isolated by Oligocene faulting and Miocene uplift \citep{Witts2012a}. The Kutei Basin is characterized by eastward-prograding deltaic and shallow shelf deposits that have been steadily supplied with sediment from the Schwaner Mountains of SW Kalimantan and the Central Range \citep{vandeWeerd1992a}. North of the Kutei Basin, the deltaic deposits found in the Tarakan Basin similarly prograde eastward from the mid Miocene onward, fed by the northern drainages of the Central Range \citep{Satyana1999a}. In SE Kalimantan, the Barito Basin is bounded to the east by the ophiolite-bearing Meratus Mountains. Sedimentological data suggests that the Meratus Mountains were not emergent until the Late Miocene \citep{Witts2012a}.
 
-Separated from the Paleozoic continental core of SW Borneo by the Lupar Line suture zone, the northern portion of Borneo (Sabah) is underlain by ophiolitic basement that extends to Palawan (Hall et al., 2008; Ilao et al., 2018). The Sarawak Basin and NW Borneo trough offshore Sabah host >10 km-thick Neogene sediementary sequences, indicative of the extent and duration of exhumation in northern Borneo (Hall et al., 2008). The Late Oligocene/Early Miocene Sabah Orogeny resulted in the uplift of both Sabah and southern Palawan (Hall, 2013a), as well as the obduction of the Palawan ophiolite and Telupid ophiolite of northern Sabah. Under-thrusting of thinned passive-margin continental crust beneath these suprasubduction ophiolites resulted in Early to Middle Miocene exhumation and offshore unconformities (Hall et al., 2008). Early Miocene sediments in northern Sabah have a provenance from Palawan (Suggate et al., 2014), indicating that Palawan, like northern Borneo, experienced uplift during the Sabah orogeny. However, initiation of back-arc extension in the Sulu Sea around 19 Ma (Hall, 2013a) resulted in the subsidence of the eastern Palawan Mountains, eliminating or reducing the role of Palawan as a sediment source for the Borneo trough. The 14 Ma Capoas Granite on Palawan and the 7.5 Ma Kinabalu Granite in Sabah are the products of crustal thinning related to pulses of regional backarc extension (Hall, 2013a). Thermochronological data from the Sabah highlands suggest extremely rapid uplift (7km/Myr) and exhumation during the latest Miocene and early Pliocene, resulting in the recent formation of Mt. Kinabalu, the tallest peak in Borneo (Cottam et al., 2013).
+Separated from the Paleozoic continental core of SW Borneo by the Lupar Line suture zone, the northern portion of Borneo (Sabah) is underlain by ophiolitic basement that extends to Palawan \citep{Hall2008a, Ilao2018a}. The Sarawak Basin and NW Borneo trough offshore Sabah host $\textgreater$10~km-thick Neogene sedimentary sequences, indicative of the extent and duration of exhumation in northern Borneo \citep{Hall2008a}. The Late Oligocene/Early Miocene Sabah Orogeny resulted in the uplift of both Sabah and southern Palawan \citep{Hall2013a}, as well as the obduction of the Palawan ophiolite and Telupid ophiolite of northern Sabah. Under-thrusting of thinned passive-margin continental crust beneath these suprasubduction ophiolites resulted in Early to Middle Miocene exhumation and offshore unconformities \citep{Hall2008a}. Early Miocene sediments in northern Sabah have a provenance from Palawan \citep{Suggate2014a}, indicating that Palawan, like northern Borneo, experienced uplift during the Sabah orogeny. However, initiation of back-arc extension in the Sulu Sea around 19~Ma \citep{Hall2013a} resulted in the subsidence of the eastern Palawan Mountains, eliminating or reducing the role of Palawan as a sediment source for the Borneo trough. The 14~Ma Capoas Granite on Palawan and the 7.5~Ma Kinabalu Granite in Sabah are the products of crustal thinning related to pulses of regional backarc extension \citep{Hall2013a}. Thermochronological data from the Sabah highlands suggest extremely rapid uplift (7~km/m.y.) and exhumation during the latest Miocene and early Pliocene, resulting in the recent formation of Mt. Kinabalu, the tallest peak in Borneo \citep{Cottam2013a}.
 
 \subsection*{Sulawesi}
 
-For the paleoshorelines of Sulawesi, we largely followed the recent stratigraphic compilation and paleoshorelines compilation of Nugraha and Hall (2018). Geographically, Sulawesi can be divided into a central highland region flanked by North, South, Southeast, and East Arms. These arms have high relief >3km that are separated by deep basins and broadly define Sulawesi’s seven tectonic provinces: 1) the West Sulawesi magmatic arc of the South Arm, 2) the Central Sulawesi metamorphic Belt, 3) the Sangihe arc of the North Arm, 4) the East Sulawesi Ophiolite of the East Arm, 5) the southeast metamorphic belt of the Southeast Arm, and the microcontinental blocks of 6) Banggai-Sula and 7) Buton-Tukang Besi (Hamilton, 1979; Katili, 1978). Like SW Borneo, the North and South Arms and much of Central Sulawesi are underlain by continental blocks that rifted off of the Australian-Birds Head margin in the Jurassic and collided in the Cretaceous with Eurasian basement of Sundaland as part of the Woyla Arc system (Hall, 2017; Hennig et al., 2017a; Hennig et al., 2016; Parkinson, 1998b). After collision, subduction polarity reversed and a Cretaceous to Miocene SE-facing volcanic arc developed (Elburg and Foden, 1998; Polvé et al., 1997) that was connected to the paleo-Sunda Arc (Hall, 2002), also referred to as the Great Indonesian arc (Harris, 2006).  The ophiolites of Sulawesi were generated in this arc system in a back arc to intra-arc setting (Monnier et al., 1995) [but see (Kadarusman et al., 2004) for an alternative view], and the largest fragments of the East Sulawesi ophiolite were detached from their metamorphic sole in the late Oligocene (32-28 Ma; Parkinson, 1998a) and thrust to the east above a west dipping slab (East Sulawesi block of Villeneuve et al., 2002). During the Early to Middle Miocene, the Tukang Besi-Buton block began to collide obliquely with the southeastern end of the Sunda Arc, causing ophiolite emplacement in West and SE Sulawesi, including Buton (Bergman et al., 1996; Smith and Silver, 1991). 
+For the paleoshorelines of Sulawesi, we largely followed the recent stratigraphic compilation and paleoshorelines compilation of \citet{Nugraha2018a}. Geographically, Sulawesi can be divided into a central highland region flanked by North, South, Southeast, and East Arms. These arms have high relief $\textgreater$3~km that are separated by deep basins and broadly define Sulawesi’s seven tectonic provinces: 1) the West Sulawesi magmatic arc of the South Arm, 2) the Central Sulawesi metamorphic Belt, 3) the Sangihe arc of the North Arm, 4) the East Sulawesi Ophiolite of the East Arm, 5) the southeast metamorphic belt of the Southeast Arm, and the microcontinental blocks of 6) Banggai-Sula and 7) Buton-Tukang Besi \citep{Hamilton1979a, Katili1978a}. Like SW Borneo, the North and South Arms and much of Central Sulawesi are underlain by continental blocks that rifted off of the Australian-Birds Head margin in the Jurassic and collided in the Cretaceous with Eurasian basement of Sundaland as part of the Woyla Arc system \citep{Parkinson1998b, Hennig2016a, Hall2017a, Hennig2017a}. After collision, subduction polarity reversed and a Cretaceous to Miocene SE-facing volcanic arc developed \citep{Polve1997a, Elburg1998a} that was connected to the paleo-Sunda Arc \citep{Hall2002b}, also referred to as the Great Indonesian arc \citep{Harris2006a}.  The ophiolites of Sulawesi were generated in this arc system in a back arc to intra-arc setting (\citealp{Monnier1995a}, but see \citealp{Kadarusman2004a} for an alternative view), and the largest fragments of the East Sulawesi ophiolite were detached from their metamorphic sole in the late Oligocene (32--28~Ma; \citealp{Parkinson1998a}) and thrust to the east above a west dipping slab (East Sulawesi block of \citealp{Villeneuve2001a}). During the Early to Middle Miocene, the Tukang Besi-Buton block began to collide obliquely with the southeastern end of the Sunda Arc, causing ophiolite emplacement in West and SE Sulawesi, including Buton \citep{Smith1991a, Bergman1996a}. 
 
-The North Arm consists of Late Pliocene and younger volcanic rocks built upon Eocene to Early Miocene oceanic basalt, basaltic andesite, pelagic sediments, and metamorphic rocks (Elburg and Foden, 1998). Eocene to Early Miocene volcanic rocks formed above a NW dipping slab in an arc system that extended to West and South Sulawesi (van Leeuwen and Muhardjo, 2005). Gorontalo Bay is an extensional basin that formed in the Pliocene, and prior to that time, the East Sulawesi was attached to the North Arm of Sulawesi. After the Oligocene to Early Miocene accretion of the East Sulawesi ophiolite, the arc system stepped out to the SE forming a Neogene (23-16 Ma) volcanic belt on the East arm (Kadarusman et al., 2004).  In the Late Miocene, SE-dipping subduction was initiated below the North Arm, which continues today at the North Sulawesi Trough. North Sulawesi was not substantially emergent until the Pliocene (van Leeuwen and Muhardjo, 2005). Active volcanoes extend from the North Arm through the Sangihe Arc into the southern Philippines. 
+The North Arm consists of Late Pliocene and younger volcanic rocks built upon Eocene to Early Miocene oceanic basalt, basaltic andesite, pelagic sediments, and metamorphic rocks \citep{Elburg1998a}. Eocene to Early Miocene volcanic rocks formed above a NW dipping slab in an arc system that extended to West and South Sulawesi \citep{vanLeeuwen2005a}. Gorontalo Bay is an extensional basin that formed in the Pliocene, and prior to that time, the East Sulawesi was attached to the North Arm of Sulawesi. After the Oligocene to Early Miocene accretion of the East Sulawesi ophiolite, the arc system stepped out to the SE forming a Neogene (23--16~Ma) volcanic belt on the East arm \citep{Kadarusman2004a}. In the Late Miocene, SE-dipping subduction was initiated below the North Arm, which continues today at the North Sulawesi Trough. North Sulawesi was not substantially emergent until the Pliocene \citep{vanLeeuwen2005a}. Active volcanoes extend from the North Arm through the Sangihe Arc into the southern Philippines. 
 
-The East and Southeast Arms consist predominantly of mafic and ultramafic rock of the East Sulawesi Ophoilite that is exposed for more than 10,000 km2 (Monnier et al., 1995). The East Arm preserves a complete ophiolitic sequence underlain by a metamorphic sole, mélange, imbricate continental margin and crystalline basement with a blueschist metamorphic overprint (Monnier et al., 1995; Parkinson, 1998a; Silver et al., 1983). Locally, the structural thickness of the ophiolite exceeds 15 km with surface relief towering over 3 km (Kadarusman et al., 2004). Seventeen igneous K-Ar dates from the East Sulawesi ophiolite range from 93-32 Ma, clustering between 60 and 40 Ma (Parkinson, 1998, and references therein). K-Ar dates on hornblende from the metamorphic sole yielded cooling ages between 36-23 Ma (Parkinson, 1998a; Villeneuve et al., 2002), which dates the initial emplacement of the East Sulawesi ophiolite as the north Sulawesi volcanic arc was underthrusted by the Sula spur (Australian crust) (Parkinson, 1998a; Silver et al., 1983); however, despite these relatively old ages of emplacement, it appears that the ophiolites on the East Arm were not substantially subaerially exposed and exhumed until the Miocene.  
+The East and Southeast Arms consist predominantly of mafic and ultramafic rock of the East Sulawesi Ophoilite that is exposed for more than 10,000~km$^{2}$ \citep{Monnier1995a}. The East Arm preserves a complete ophiolitic sequence underlain by a metamorphic sole, m\'elange, imbricate continental margin and crystalline basement with a blueschist metamorphic overprint \citep{Silver1983a, Monnier1995a, Parkinson1998a}. Locally, the structural thickness of the ophiolite exceeds 15~km with surface relief towering over 3~km \citep{Kadarusman2004a}. Seventeen igneous K-Ar dates from the East Sulawesi ophiolite range from 93--32~Ma, clustering between 60~Ma and 40~Ma (\citealp{Parkinson1998b} and references therein). K-Ar dates on hornblende from the metamorphic sole yielded cooling ages between 36--23~Ma \citep{Parkinson1998a, Villeneuve2001a}, which dates the initial emplacement of the East Sulawesi ophiolite as the north Sulawesi volcanic arc was underthrusted by the Sula spur (Australian crust) \citep{Silver1983a, Parkinson1998a}; however, despite these relatively old ages of emplacement, it appears that the ophiolites on the East Arm were not substantially subaerially exposed and exhumed until the Miocene.  
 
-Collision of the Sula-Banggai block with the East margin of Sulawesi began in the latest Miocene and uplift accelerated in the early Pliocene (5.2 to 3.8 Ma) and is associated with a major pulse of sedimentation in adjacent basins (Davies, 1990; Villeneuve et al., 2000). Off the northeast margin of the east arm of Sulawesi, Miocene platform carbonates on the Sula-Banggai block are overlain by Late Miocene to Early Pliocene ophiolite detritus in the Celebes mélange (Davies, 1990). Thus, although the East Sulawesi ophiolite was trapped/emplaced onto the composite Sundaland margin (i.e. a fragment of previously accreted Australian crust) between 36 and 23 Ma, mafic and ultramafic rocks on the south and west arms appear to have not been substantially subaerially exposed in the south and west arms until after 15 Ma, and on the east arm until after 5 Ma.
+Collision of the Sula-Banggai block with the East margin of Sulawesi began in the latest Miocene and uplift accelerated in the early Pliocene (5.2~Ma to 3.8~Ma) and is associated with a major pulse of sedimentation in adjacent basins \citep{Davies1990a, Villeneuve2000a}. Off the northeast margin of the east arm of Sulawesi, Miocene platform carbonates on the Sula-Banggai block are overlain by Late Miocene to Early Pliocene ophiolite detritus in the Celebes m\'elange \citep{Davies1990a}. Thus, although the East Sulawesi ophiolite was trapped/emplaced onto the composite Sundaland margin (i.e. a fragment of previously accreted Australian crust) between 36~Ma and 23~Ma, mafic and ultramafic rocks on the south and west arms appear to have not been substantially subaerially exposed in the south and west arms until after 15~Ma, and on the east arm until after 5~Ma.
 
-West Sulawesi rifted from Borneo during the Eocene forming the Makassar Straits back arc basin behind a southwest-facing arc (Polvé et al., 1997). Eroded fragments of ophiolite and extensive belts of volcanic rocks are preserved on the West and South Arms of Sulawesi (Bergman et al., 1996; van Leeuwen et al., 2010). During the Middle Miocene (ca. 15-13 Ma), extensional faults in the Bone basin reversed, which was accompanied by uplift and erosion of the Bone Mountain ophiolite and Lamasi complex in West Sulawesi (Bergman et al., 1996; van Leeuwen et al., 2010). Shortening was likely due to the collision of the leading edge of the Buton-Tukang Besi block, which collided with Buton and the SE Arm of Sulawesi (Smith and Silver, 1991). Uplift and erosion is recorded by the presence of a major Middle Miocene unconformity and sedimentary breccias in marginal basins (Bergman et al., 1996; van Leeuwen et al., 2010). Uplift was diachronous, not effecting units below and to the west of the Lamasai ophiolite until the Middle Miocene (~13 Ma) (van Leeuwen et al., 2010). Alkali volcanism ensued at ca. 11 Ma and is associated with a second phase of extension and exhumation. From the Late Miocene to Pliocene fission track ages imply deep exhumation (Bergman et al., 1996; Smith and Silver, 1991; van Leeuwen et al., 2010).
+West Sulawesi rifted from Borneo during the Eocene forming the Makassar Straits back arc basin behind a southwest-facing arc \citep{Polve1997a}. Eroded fragments of ophiolite and extensive belts of volcanic rocks are preserved on the West and South Arms of Sulawesi \citep{Bergman1996a, vanLeeuwen2010a}. During the Middle Miocene (ca. 15--13~Ma), extensional faults in the Bone basin reversed, which was accompanied by uplift and erosion of the Bone Mountain ophiolite and Lamasi complex in West Sulawesi \citep{Bergman1996a, vanLeeuwen2010a}. Shortening was likely due to the collision of the leading edge of the Buton-Tukang Besi block, which collided with Buton and the SE Arm of Sulawesi \citep{Smith1991a}. Uplift and erosion is recorded by the presence of a major Middle Miocene unconformity and sedimentary breccias in marginal basins \citep{Bergman1996a, vanLeeuwen2010a}. Uplift was diachronous, not effecting units below and to the west of the Lamasai ophiolite until the Middle Miocene (ca. 13~Ma) \citep{vanLeeuwen2010a}. Alkali volcanism ensued at ca. 11~Ma and is associated with a second phase of extension and exhumation. From the Late Miocene to Pliocene fission track ages imply deep exhumation \citep{Smith1991a, Bergman1996a, vanLeeuwen2010a}.
 
-Fission track ages from granitoids in central Sulawesi indicate rapid uplift of Central Sulawesi (200–700 m/Myr) starting at about 5 Ma associated with movement on the Palo-Koro fault (Bellier et al., 2006). The fault system also shows a normal component with rapid exhumation of rock west of the fault in western Sulawesi – all fission track dates are younger than 5 Ma (Bellier et al., 2006). Just east of the Palo-Koro fault, the Palu Metamorphic Complex was exhumed in the Late Miocene to early Pliocene in the north (~5.3 Ma) and later Pliocene in the south (~3.1–2.7 Ma) at rates of up to 400 m/Myr (Hennig et al., 2017b).
+Fission track ages from granitoids in central Sulawesi indicate rapid uplift of Central Sulawesi (200--700~m/m.y.) starting at about 5~Ma associated with movement on the Palo-Koro fault \citep{Bellier2006a}. The fault system also shows a normal component with rapid exhumation of rock west of the fault in western Sulawesi -- all fission track dates are younger than 5~Ma \citep{Bellier2006a}. Just east of the Palo-Koro fault, the Palu Metamorphic Complex was exhumed in the Late Miocene to early Pliocene in the north (ca. 5.3~Ma) and later Pliocene in the south (ca. 3.1--2.7~Ma) at rates of up to 400~m/m.y. \citep{Hennig2017b}.
 
 \subsection*{New Guinea and Halmahera}
 
-Paleoshoreline maps were georeferenced from several previous tectonic and paleogeographic analyses, most notably those of Cloos et al. (2005), Gold et al. (2017), Harrington et al. (2017), and Nichols and Hall (1991). These studies were all based to varying degrees on lithological distributions, biostratigraphic, borehole data, and tectonic models. We complimented these data with our stratigraphic compilations for the region to provide further paleoenvironmental context.
+Paleoshoreline maps were georeferenced from several previous tectonic and paleogeographic analyses, most notably those of \citet{Nichols1991a}, \citet{Cloos2005a}, \citet{Gold2017a}, and \citet{Harrington2017a}. These studies were all based to varying degrees on lithological distributions, biostratigraphic, borehole data, and tectonic models. We complimented these data with our stratigraphic compilations for the region to provide further paleoenvironmental context.
 
-Northern New Guinea, including the Melanesian Arc, was emplaced above the Australian plate during the Miocene (Baldwin et al., 2012; Cloos et al., 2005; Hamilton, 1979; van Ufford and Cloos, 2005). Two major ophiolite belts marking the suture—the Irian-Marum ophiolite belt (including the April ultramafics), and the Papuan Ultramafic Belt (PUB)—are preserved along the Central Range and Peninsular Range, respectively. South of the Irian-Marum ophiolites, the Ruffaer Metamorphic Complex constructed from the accretionary wedge, forms the spine of the Central Range (up to ~5 km elevation today).
+Northern New Guinea, including the Melanesian Arc, was emplaced above the Australian plate during the Miocene \citep{Hamilton1979a, Cloos2005a, vanUfford2005a, Baldwin2012a}. Two major ophiolite belts marking the suture -- the Irian-Marum ophiolite belt (including the April ultramafics), and the Papuan Ultramafic Belt (PUB) -- are preserved along the Central Range and Peninsular Range, respectively. South of the Irian-Marum ophiolites, the Ruffaer Metamorphic Complex constructed from the accretionary wedge, forms the spine of the Central Range (up to $\sim$5~km elevation today).
 
-The Middle Miocene (16–14 Ma) basal Makats Formation contains siliciclastic sediment that was transported from the south into the forearc basin associated with the Irian-Marum ophiolite belt (Cloos et al., 2005; Visser and Hermes, 1962). This precedes, by several million years, the beginning of widespread synorogenic sedimentation to the south and on the Australian continental basement at ca. 12 Ma (van Ufford and Cloos, 2005). Mountain building began in Late Miocene time, ca. 8-7 Ma (Baldwin et al., 2012; van Ufford and Cloos, 2005), but major relief was not generated until the Pliocene (Weiland and Cloos, 1996). Similarly, the Marum ophiolite was uplifted between 8-5 Ma with 3-4 km of denudation (Crowhurst et al., 1996). An estimated 80-100 km of shortening has been accommodated by deformation on the south side of the Central Range (Cloos et al., 2005; Hill and Gleadow, 1989).
+The Middle Miocene (16--14~Ma) basal Makats Formation contains siliciclastic sediment that was transported from the south into the forearc basin associated with the Irian-Marum ophiolite belt \citep{Visser1962a, Cloos2005a}. This precedes, by several million years, the beginning of widespread synorogenic sedimentation to the south and on the Australian continental basement at ca. 12~Ma \citep{vanUfford2005a}. Mountain building began in Late Miocene time, ca. 8--7~Ma \citep{vanUfford2005a, Baldwin2012a}, but major relief was not generated until the Pliocene \citep{Weiland1996a}. Similarly, the Marum ophiolite was uplifted between 8--5~Ma with 3--4~km of denudation \citep{Crowhurst1996a}. An estimated 80--100~km of shortening has been accommodated by deformation on the south side of the Central Range \citep{Hill1989a, Cloos2005a}.
 
-Along the Papuan Peninsula of Eastern New Guinea, the PUB was obducted above a north dipping slab during Oligocene arc-continent collision between Australian continental fragments and the Melanesian arc, but remained largely subaqueous until the Miocene (Davies and Jaques, 1984; Davies and Smith, 1971; van Ufford and Cloos, 2005). Miocene to present arc-continent collision in New Guinea has progressed from west to east. Exhumation of the Central Range accelerated over the past 4~m.y. due to slab-breakoff and buoyant uplift (Cloos et al., 2005). This was accompanied with a change to left-lateral lateral motion on the northern coast of New Guinea, which caused the exhumation of ophiolites both along the coast (Monnier et al., 1999) and on the islands Obi (Ali et al., 2001) and Halmahera (Ballantyne, 1992; Hall et al., 1988). In eastern New Guinea, progressive jamming of the north-dipping subduction zone has caused major uplift over the past 4 Ma (van Ufford and Cloos, 2005), which is well dated with a change in provenance from continental to volcanic detritus (Abbott et al., 1994) and thermochronology (Hill and Gleadow, 1989).
+Along the Papuan Peninsula of Eastern New Guinea, the PUB was obducted above a north dipping slab during Oligocene arc-continent collision between Australian continental fragments and the Melanesian arc, but remained largely subaqueous until the Miocene \citep{Davies1971a, Davies1984a, vanUfford2005a}. Miocene to present arc-continent collision in New Guinea has progressed from west to east. Exhumation of the Central Range accelerated over the past 4~m.y. due to slab-breakoff and buoyant uplift \citep{Cloos2005a}. This was accompanied with a change to left-lateral lateral motion on the northern coast of New Guinea, which caused the exhumation of ophiolites both along the coast \citep{Monnier1999a} and on the islands Obi \citep{Ali2001a}and Halmahera \citep{Hall1988a, Ballantyne1992a}. In eastern New Guinea, progressive jamming of the north-dipping subduction zone has caused major uplift over the past 4~Ma \citep{vanUfford2005a}, which is well dated with a change in provenance from continental to volcanic detritus \citep{Abbott1994a} and thermochronology \citep{Hill1989a}.
 
-In the Bird’s Neck of western New Guinea, the Lengguru foldbelt formed during Middle to Late Miocene CW rotation and obduction of the Weyland Terrane (Bailly et al., 2009). Recent CCW rotation has exhumed several core complexes and has produced Pliocene compressional deformation to the southwest in the Misool-Onin-Kumawa Ridge (Sapin et al., 2009).
+In the Bird’s Neck of western New Guinea, the Lengguru foldbelt formed during Middle to Late Miocene clockwise rotation and obduction of the Weyland Terrane \citep{Bailly2009a}. Recent counter-clockwise rotation has exhumed several core complexes and has produced Pliocene compressional deformation to the southwest in the Misool-Onin-Kumawa Ridge \citep{Sapin2009a}.
 
 \subsection*{Philippines}
 
-Our reconstructions of the paleoshorelines of the Phillipines were primarily informed by paleogeographic reconstructions from Hall (Hall, 1997), coupled with geologic maps of the archipelago (Geological Survey Division, 1963). The Philippine ophiolites have been grouped in four distinct belts (Yumul, 2007). We combine belts 1 and 2 in an eastern suture zone and belts 3 and 4 in a western suture zone (Fig. 3; sutures 11 and 12). Belts 1 and 2 were juxtaposed in the eastern suture zone during sinistral transpression, which resulted in Early Miocene uplift and deposition of coarse clastic sediments (Pubellier et al., 1991). The Palawan microcontinental block and Philippine mobile belt collided during late Early Miocene to early Middle Miocene resulting into the emplacement of the western ophiolites, with exhumation extending from the Late Miocene to the present (Yumul Jr et al., 2013). In addition to collision, arc magmatism contributed significantly to crustal growth in the Philippines (Dimalanta and Yumul, 2003).
+Our reconstructions of the paleoshorelines of the Phillipines were primarily informed by paleogeographic reconstructions from Hall \citep{Hall1997a}, coupled with geologic maps of the archipelago (Geological Survey Division, 1963). The Philippine ophiolites have been grouped in four distinct belts (Yumul, 2007). We combine belts 1 and 2 in an eastern suture zone and belts 3 and 4 in a western suture zone (Fig. 3; sutures 11 and 12). Belts 1 and 2 were juxtaposed in the eastern suture zone during sinistral transpression, which resulted in Early Miocene uplift and deposition of coarse clastic sediments (Pubellier et al., 1991). The Palawan microcontinental block and Philippine mobile belt collided during late Early Miocene to early Middle Miocene resulting into the emplacement of the western ophiolites, with exhumation extending from the Late Miocene to the present (Yumul Jr et al., 2013). In addition to collision, arc magmatism contributed significantly to crustal growth in the Philippines (Dimalanta and Yumul, 2003).
 
 \subsection*{Sunda-Banda Arc}
 
